--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   "author": "zyh9 <1124596031@qq.com>",
   "license": "ISC",
   "devDependencies": {
-    "@megalo/target": "^0.2.1",
-    "@megalo/template-compiler": "^0.2.1",
-    "babel-core": "6",
+    "@megalo/target": "^0.2.2",
+    "@megalo/template-compiler": "^0.3.1",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.0",
+    "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.4",
     "url-loader": "^1.1.2",
     "vue": "^2.5.17",
-    "vue-loader": "15.4.0",
-    "vue-style-loader": "^4.1.1",
+    "vue-loader": "15.4.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "@megalo/vhtml-plugin": "^0.1.0",
-    "megalo": "^0.2.1",
+    "megalo": "^0.3.1",
     "octoparse": "^0.2.0"
   }
 }
