--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@megalo/template-compiler": "^0.3.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
     "copy-webpack-plugin": "^4.6.0",
