--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@megalo/target": "^0.2.2",
     "@megalo/template-compiler": "^0.3.1",
+    "autoprefixer": "^9.3.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -27,6 +28,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "postcss-loader": "^3.0.0",
     "url-loader": "^1.1.2",
     "vue": "^2.5.17",
     "vue-loader": "15.4.2",
