--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "babel-runtime": "^6.26.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "keymirror": "^0.1.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.4",
     "postcss-loader": "^3.0.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "vue": "^2.5.17",
     "vue-loader": "15.4.2",
