--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.4",
     "postcss-loader": "^3.0.0",
+    "postcss-mpvue-wxss": "^1.0.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "vue": "^2.5.17",
