--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "zyh9 <1124596031@qq.com>",
   "license": "ISC",
   "devDependencies": {
-    "@megalo/target": "^0.3.0",
-    "@megalo/template-compiler": "^0.3.2",
-    "autoprefixer": "^9.3.1",
+    "@megalo/entry": "^0.1.0",
+    "@megalo/target": "^0.4.8",
+    "@megalo/template-compiler": "^0.5.1",
+    "autoprefixer": "^9.4.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -27,9 +28,9 @@
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "keymirror": "^0.1.1",
-    "less": "^3.8.1",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^0.4.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-mpvue-wxss": "^1.0.2",
@@ -40,13 +41,13 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
     "vuex": "^3.0.1",
-    "webpack": "^4.26.0",
+    "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "@megalo/vhtml-plugin": "^0.1.0",
-    "megalo": "^0.3.2",
+    "megalo": "^0.5.1",
     "octoparse": "^0.2.0"
   }
 }
