--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
   "author": "zyh9 <1124596031@qq.com>",
   "license": "ISC",
   "devDependencies": {
-    "@megalo/entry": "^0.1.0",
-    "@megalo/target": "^0.4.8",
-    "@megalo/template-compiler": "^0.5.1",
-    "autoprefixer": "^9.4.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/runtime": "^7.2.0",
+    "@megalo/entry": "^0.1.1",
+    "@megalo/px2rpx-loader": "^0.1.1",
+    "@megalo/target": "^0.4.10",
+    "@megalo/template-compiler": "^0.6.0",
+    "autoprefixer": "^9.4.2",
+    "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.1",
+    "css-loader": "^2.0.0",
     "cssnano": "^4.1.7",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "keymirror": "^0.1.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.5",
+    "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-mpvue-wxss": "^1.0.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
-    "vue": "^2.5.17",
+    "vue": "2.5.17",
     "vue-loader": "15.4.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "2.5.17",
     "vuex": "^3.0.1",
-    "webpack": "^4.26.1",
+    "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "@megalo/vhtml-plugin": "^0.1.0",
-    "megalo": "^0.5.1",
+    "megalo": "^0.6.0",
     "octoparse": "^0.2.0"
   }
 }
