--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@babel/runtime": "^7.2.0",
     "@megalo/entry": "^0.1.1",
     "@megalo/px2rpx-loader": "^0.1.1",
-    "@megalo/target": "^0.4.10",
-    "@megalo/template-compiler": "^0.6.0",
+    "@megalo/target": "^0.5.0",
+    "@megalo/template-compiler": "^0.6.3",
     "autoprefixer": "^9.4.2",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.0.0",
+    "css-loader": "^2.0.1",
     "cssnano": "^4.1.7",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -38,7 +38,7 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "vue": "2.5.17",
-    "vue-loader": "15.4.2",
+    "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "2.5.17",
     "vuex": "^3.0.1",
@@ -47,8 +47,8 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "@megalo/vhtml-plugin": "^0.1.0",
-    "megalo": "^0.6.0",
-    "octoparse": "^0.2.0"
+    "@megalo/vhtml-plugin": "^0.1.1",
+    "megalo": "^0.6.3",
+    "octoparse": "^0.2.1"
   }
 }
