--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/runtime": "^7.3.1",
     "@megalo/entry": "^0.1.1",
     "@megalo/px2rpx-loader": "^0.1.1",
     "@megalo/target": "^0.6.2",
-    "@megalo/template-compiler": "^0.7.3",
-    "autoprefixer": "^9.4.5",
+    "@megalo/template-compiler": "^0.7.4-0",
+    "autoprefixer": "^9.4.6",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
@@ -38,7 +38,7 @@
     "postcss-mpvue-wxss": "^1.0.2",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
-    "vue-loader": "^15.5.1",
+    "vue-loader": "^15.6.0",
     "vue-style-loader": "^4.1.2",
     "vuex": "^3.1.0",
     "webpack": "^4.29.0",
@@ -47,7 +47,7 @@
   },
   "dependencies": {
     "@megalo/vhtml-plugin": "^0.1.2",
-    "megalo": "^0.7.3",
+    "megalo": "^0.7.4-0",
     "octoparse": "^0.3.2"
   }
 }
