--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@megalo/entry": "^0.1.1",
     "@megalo/px2rpx-loader": "^0.1.1",
     "@megalo/target": "^0.6.2",
-    "@megalo/template-compiler": "^0.7.4-0",
+    "@megalo/template-compiler": "^0.7.5",
     "autoprefixer": "^9.4.6",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^4.6.0",
@@ -38,7 +38,7 @@
     "postcss-mpvue-wxss": "^1.0.2",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
-    "vue-loader": "^15.6.0",
+    "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
     "vuex": "^3.1.0",
     "webpack": "^4.29.0",
@@ -47,7 +47,7 @@
   },
   "dependencies": {
     "@megalo/vhtml-plugin": "^0.1.2",
-    "megalo": "^0.7.4-0",
+    "megalo": "^0.7.5",
     "octoparse": "^0.3.2"
   }
 }
