--- a/package.json
+++ b/package.json
@@ -1,52 +1,39 @@
 {
-  "name": "megalo",
+  "name": "megalo-other",
   "version": "1.0.0",
   "description": "a megalo project",
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev:alipay": "webpack --config ./build/webpack.config.alipay.js -w",
-    "dev:swan": "webpack --config ./build/webpack.config.swan.js -w",
-    "dev:wechat": "webpack --config ./build/webpack.config.wechat.js -w"
+    "build:wechat": "megalo-cli-service build",
+    "build:alipay": "megalo-cli-service build --platform alipay",
+    "build:swan": "megalo-cli-service build --platform swan",
+    "dev:alipay": "megalo-cli-service serve --platform alipay",
+    "dev:swan": "megalo-cli-service serve --platform swan",
+    "dev:wechat": "megalo-cli-service serve"
   },
-  "keywords": [],
-  "author": "zyh9 <1124596031@qq.com>",
+  "author": "zyh <1124596031@qq.com>",
   "license": "ISC",
+  "babel": {
+    "presets": [
+      "@megalo/app"
+    ]
+  },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/runtime": "^7.4.2",
-    "@megalo/entry": "^0.1.2",
-    "@megalo/px2rpx-loader": "^0.1.1",
-    "@megalo/target": "^0.7.0",
-    "@megalo/template-compiler": "^0.9.0",
-    "autoprefixer": "^9.5.0",
-    "babel-loader": "^8.0.5",
+    "@megalo/babel-preset-app": "^1.0.0-alpha.1",
+    "@megalo/cli-service": "^1.0.0-alpha.8",
+    "@megalo/target": "^0.5.7",
+    "@megalo/template-compiler": "^0.8.0",
     "copy-webpack-plugin": "^5.0.2",
-    "css-loader": "^2.1.1",
-    "cssnano": "^4.1.10",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "keymirror": "^0.1.1",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-mpvue-wxss": "^1.0.2",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "url-loader": "^1.1.2",
-    "vue-loader": "^15.7.0",
-    "vue-style-loader": "^4.1.2",
-    "vuex": "^3.1.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0"
   },
   "dependencies": {
+    "@megalo/api": "^0.2.2",
     "@megalo/vhtml-plugin": "^0.1.2",
-    "megalo": "^0.9.0",
-    "octoparse": "^0.3.2"
+    "keymirror": "^0.1.1",
+    "megalo": "^0.8.0",
+    "octoparse": "^0.3.2",
+    "vuex": "^3.1.0"
   }
 }
